# internal/api/handler.go
@@ -1,13 +1,13 @@
 package api
 
 import (
-	"github.com/elgntt/avito-internship-2023/internal/pkg/app_err"
+	"github.com/elgntt/segmentation-service/internal/pkg/app_err"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"     // swagger embed files
 	ginSwagger "github.com/swaggo/gin-swagger" // gin-swagger middleware
 
-	_ "github.com/elgntt/avito-internship-2023/docs"
+	_ "github.com/elgntt/segmentation-service/docs"
 )
 
 const (
@@ -15,8 +15,8 @@ const (
 	ErrInvalidMonthParameter  = `invalid "month" parameter`
 	ErrInvalidSegmentSlug     = `invalid segment slug`
 	ErrInvalidUserIdParameter = `invalid "userId" parameter`
-	ErrInvalidAutoJoinProcent = `invalid "autoJoinProcent" value`
-	ErrInvalidUserId          = "invalid userId"
+	ErrInvalidAutoJoinPercent = `invalid "autoJoinPercent" value`
+	ErrInvalidUserId          = `invalid userId`
 )
 
 type handler struct {
@@ -40,10 +40,10 @@ func New(us userService, hs historyService, ss segmentService) *gin.Engine {
 
 	r.Static("/assets/csv_reports", "./assets/csv_reports")
 
-	r.POST("/segment/create", h.CreateSegment)
+	r.POST("/segment", h.CreateSegment)
 	r.POST("/user/segment/action", h.UserSegmentAction)
-	r.DELETE("/segment/delete", h.DeleteSegment)
-	r.GET("/user/segment/getAllActive", h.GetUserSegments)
+	r.DELETE("/segment", h.DeleteSegment)
+	r.GET("/user/segment/active", h.GetUserSegments)
 	r.GET("/history/file", h.GetReportFile)
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
